Added first recipe and an image

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <header><h1>Odin Recipes</h1></header>
-    <a href="recipes/pizza.html">Pizza recipe</a>
-</body>
+    <a href="recipes/pizza.html" target="_blank" rel="noopener noreferrer">Pizza recipe</a>
+    </body>
 </html>
