--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -6,6 +6,35 @@
     <title>Pizza recipe</title>
 </head>
 <body>
-    <header><h1>Pizza</h1></header>
+    <header>
+        <h1><strong>Pizza</strong></h1>
+    </header>
+    <img src="images/pizza.jpg" alt="Pizza" width="400" height="auto">
+    <h2>A delicious homemade pizza</h2>
+    <p>This recipe will teach you how to easily make a delicious homemade pizza. It may seem like a lot of work, but the results promise a delicious meal and the satisfaction of mastering a kitchen staple. So, let's begin by listing the ingredients we need!</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Yeast (1 standard packet)</li>
+        <li>Water (1 cup)</li>
+        <li>Flour (30 dag)</li>
+        <li>Oil (3-4 tbsp)</li>
+        <li>Salt (1 pinch)</li>
+        <li>Sugar (1 tbsp)</li>
+        <li>Cornmeal</li>
+        <li>Toppings of your choice</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Dissolve your yeast in water</li>
+        <li>Pour the mixture to the bowl with flour</li>
+        <li>Add oil, salt and sugar</li>
+        <li>Mix and knead</li>
+        <li>Wait around 40 minutes until your dough rises (to make it rise faster store your dough in a warm place)</li> 
+        <li>Punch and shape your pizza, add cornmeal to your tray to make your crust more unique</li>
+        <li>Smear a bit of oil on top of your dough</li>
+        <li>Add the desired toppings and let your dough rise for another 15 minutes</li>
+        <li>Bake in 230 degrees Celcius for 25 minutes</li>
+        <li>Voila! Enjoy your pizza!</li>
+    </ol>
 </body>
 </html>
