Added a spaghetti bolognese recipes

--- a/recipes/bolognese.html
+++ b/recipes/bolognese.html
@@ -3,9 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Spaghetti bolognese recipe</title>
 </head>
 <body>
-    
+    <header><h1>Spaghetti bolognese</h1></header>
+    <img src="images/bolognese.jpg" alt="Spaghetti bolognese" width="400" height="auto">
+    <h2>A mouth-watering homemade spaghetti bolognese</h2>
+    <p>This recipe will teach you how to make this delicious and easy classic Italian dish. This pasta bolognese recipe is sure to become a family favourite.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Olive oil (2 tbsp)</li>
+        <li>Beef mince (400 g)</li>
+        <li>One onion</li>
+        <li>Two garlic cloves</li>
+        <li>Tomato sauce</li>
+        <li>Herbs and spices (mainly oregano, basil, salt, pepper)</li>
+        <li>Spaghetti pasta</li>
+    </ul>
+    <h2>Steps</h2>
+      <ol>
+        <li>Prepare your tomatoe sauce by adding your spices</li>
+        <li>Smash your garlic cloves and chop your onion and add it to the sauce</li>
+        <li>Add olive oil to your pan and startd cooking your meat</li>
+        <li>When it gets slightly brown add your tomatoe sauce and stew it for around 20 minutes</li>
+        <li>In the meantime prepare your pasta by boiling it</li>
+        <li>After your meat and sauce are ready apply it to pasta</li>
+        <li>Enjoy your meal!</li>
+      </ol>
 </body>
 </html>
