Added a toolbar to the index page Started a general graphics overhaul

--- a/index.html
+++ b/index.html
@@ -7,8 +7,21 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <header><h1>Odin Recipes</h1></header>
-      <ul>
+  <div class="navbar">
+    <header>
+      <img class="logo" src="recipes/images/7513626.jpg" alt="logo" height="150px auto">
+      <h1>Odin Recipes!</h1>
+      <nav>
+        <ul class="nav-links">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About us</a></li>
+          <li><a href="#">Review</a></li>
+        </ul>
+      </nav>
+      <a class="cta" href="#"><button>Contact us!</button></a>
+    </header>
+    </div>
+      <ul class="items">
         <li><a href="recipes/pizza.html" target="_blank" rel="noopener noreferrer">Pizza recipe</a></li>
         <li><a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna recipe</a></li>
         <li><a href="recipes/bolognese.html" target="_blank" rel="noopener noreferrer">Spaghetti bolognese recipe</a></li>
