--- a/recipes/bolognese.html
+++ b/recipes/bolognese.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spaghetti bolognese recipe</title>
+    <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
     <header><h1>Spaghetti bolognese</h1></header>
-    <img src="images/bolognese.jpg" alt="Spaghetti bolognese" width="400" height="auto">
+    <img src="images/bolognese.jpg" alt="Spaghetti bolognese" width="400" height="auto" class="image">
     <h2>A mouth-watering homemade spaghetti bolognese</h2>
     <p>This recipe will teach you how to make this delicious and easy classic Italian dish. This pasta bolognese recipe is sure to become a family favourite.</p>
     <h2>Ingredients</h2>
-    <ul>
+    <ul class="items">
         <li>Olive oil (2 tbsp)</li>
         <li>Beef mince (400 g)</li>
         <li>One onion</li>
@@ -21,7 +22,7 @@
         <li>Spaghetti pasta</li>
     </ul>
     <h2>Steps</h2>
-      <ol>
+      <ol class="items">
         <li>Prepare your tomatoe sauce by adding your spices</li>
         <li>Smash your garlic cloves and chop your onion and add it to the sauce</li>
         <li>Add olive oil to your pan and startd cooking your meat</li>
