--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pizza recipe</title>
+    <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
     <header>
         <h1><strong>Pizza</strong></h1>
     </header>
-    <img src="images/pizza.jpg" alt="Pizza" width="400" height="auto">
+    <img src="images/pizza.jpg" alt="Pizza" width="400" height="auto" class="image">
     <h2>A delicious homemade pizza</h2>
     <p>This recipe will teach you how to easily make a delicious homemade pizza. It may seem like a lot of work, but the results promise a delicious meal and the satisfaction of mastering a kitchen staple. So, let's begin by listing the ingredients we need!</p>
     <h2>Ingredients</h2>
-    <ul>
+    <ul class="items">
         <li>Yeast (1 standard packet)</li>
         <li>Water (1 cup)</li>
         <li>Flour (30 dag)</li>
@@ -24,7 +25,7 @@
         <li>Toppings of your choice</li>
     </ul>
     <h2>Steps</h2>
-    <ol>
+    <ol class="items">
         <li>Dissolve your yeast in water</li>
         <li>Pour the mixture to the bowl with flour</li>
         <li>Add oil, salt and sugar</li>
