--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna recipe</title>
+    <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
     <header><h1>Lasagna</h1></header>
-    <img src="images/lasagna.jpg" alt="Lasagna" width="400" height="auto">
+    <img src="images/lasagna.jpg" alt="Lasagna" width="400" height="auto" class="image">
     <h2>A tasty homemade lasagna</h2>
     <p>This classic lasagna recipe is made with an easy meat sauce as the base. Layer the sauce with noodles and cheese, then bake until bubbly! This is great for feeding a big family and freezes well, too. Making lasagna can be time-consuming, but the results are well worth the wait. You'll find a detailed ingredient list and step-by-step instructions in the recipe below, but let's go over the basics:</p>
     <h2>Ingredients</h2>
-    <ul>
+    <ul class="items">
         <li>Ground beef</li>
         <li>Onion</li>
         <li>Garlic (two cloves)</li>
@@ -25,7 +26,7 @@
         <li>One egg</li>
     </ul>
     <h2>Steps</h2>
-      <ol>
+      <ol class="items">
         <li>Make the meat sauce</li>
         <li>Cook the noodles</li>
         <li>Create cheese mixture</li>
