Minor changes to navbar

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="navbar">
     <header>
       <img class="logo" src="recipes/images/7513626.jpg" alt="logo" height="150px auto">
-      <h1>Odin Recipes!</h1>
+      <h1 class="landing-page">Odin Recipes!</h1>
       <nav>
         <ul class="nav-links">
           <li><a href="#">Home</a></li>
